# raytracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  analyze.sh  build.sh  build_and_run.sh  compile.sh  format.sh  run.sh  test.sh
.github/workflows/: ci.yml
include/: Camera.h  Hittable.h  Image.h  Material.h  Pixel.h  Random.h  Ray.h  Render.h  Row.h  Sphere.h  Utilities.h  Vec3.h  World.h  WriteColor.h
src/: CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Color.h  Hittable.cpp  Hittable.h  Hittable.hpp  HittableList.cpp  HittableList.hpp  Image.h  Material.cpp  Material.h  Material.hpp  Pixel.h  Random.cpp  Random.h  Random.hpp  Ray.cpp  Ray.hpp  Raytracer.cpp  Render.h  Row.h  Sphere.cpp  Sphere.hpp  Utilities.cpp  Utilities.hpp  Vec3.h  World.h  WriteColor.h  camera.h  color.h  hittable.h  hittable_list.h  main.cpp  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
test/: ImageTests.cpp
tests/: CMakeLists.txt  UnitTests.cpp
